# cita-uiauto-engine

./: .gitignore  FIXES.md  GUI.md  INSPECTING.md  MIGRATION_GUIDE.md  README.md  RECORDING.md  RUNNING.md  conftest.py  main_ui.py  release-notes  report.json  requirements-ui.txt  test_waits.py  yol-haritası.md
core/: README.md  pyproject.toml  setup.py
core/uiauto_core/: __init__.py  artifacts.py  exceptions.py  interfaces.py  repository.py  runner.py  waits.py
core/uiauto_core/schemas/: scenario.schema.json
dev/: scenario.py
javafx/: README.md  pyproject.toml
javafx/examples/: README.md
javafx/uiauto_javafx/: __init__.py  actions.py  cli.py  element.py  inspector.py  jab_bridge.py  resolver.py  session.py
object-maps/: elements.yaml
qtquick/: README.md  pyproject.toml  setup.py
qtquick/docs/: INSPECTING.md  RUNNING.md
qtquick/uiauto_qtquick/: __init__.py  actions.py  artifacts.py  cli.py  element.py  inspector.py  recorder.py  resolver.py  session.py
qtquick/uiauto_qtquick/defaults/: elements.yaml
scenarios/: qtQuickTaskApp.yaml  scenario.yaml  todo-app.yaml
tests/: test_waits.py
uiauto/: __init__.py  actionlogger.py  actions.py  cli.py  config.py  context.py  element.py  element_meta.py  exceptions.py  inspector.py  loghub.py  overlay.py  recorder.py  repository.py  resilient.py  resolver.py  runner.py  session.py  timinglogger.py  timings.py  waits.py
uiauto/schemas/: scenario.schema.json
uiauto_ui/: __init__.py  app.py  cli_executor.py  commands.py  pytest_runner.py  status_mapping.py
uiauto_ui/forms/: __init__.py  base_form.py  inspect_form.py  record_form.py  run_form.py
uiauto_ui/models/: __init__.py  command_result.py  execution_state.py
uiauto_ui/resources/: styles.qss
uiauto_ui/services/: __init__.py  execution_service.py  settings_service.py  validation_service.py
uiauto_ui/utils/: __init__.py  logging.py  paths.py  platform.py
uiauto_ui/widgets/: __init__.py  command_preview.py  key_value_table.py  output_viewer.py  path_selector.py  status_bar.py
