[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uiauto-core"
version = "1.0.0"
description = "Core automation engine for UI testing (framework-agnostic)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "UIAuto Contributors"}
]
dependencies = [
    "pyyaml>=5.4",
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/AlperHuseyn/cita-uiauto-engine"
Repository = "https://github.com/AlperHuseyn/cita-uiauto-engine"

[tool.setuptools.packages.find]
where = ["."]
include = ["uiauto_core*"]

[tool.setuptools.package-data]
uiauto_core = ["schemas/*.json"]
