[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uiauto-core"
version = "1.0.0"
description = "Core framework for UI automation - framework-agnostic"
authors = [{name = "Alper Huseyn"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=5.4",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["uiauto_core*"]
