[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uiauto-qtquick"
version = "1.0.0"
description = "QtQuick UI automation with pywinauto UIA backend"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "UIAuto Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "uiauto-core==1.0.0",
    "pywinauto>=0.6.8",
    "comtypes>=1.1.7",
    "pillow>=8.0.0",
]

[project.optional-dependencies]
recorder = ["pynput>=1.7.0"]

[project.scripts]
uiauto-qtquick = "uiauto_qtquick.cli:main"

[project.urls]
Homepage = "https://github.com/AlperHuseyn/cita-uiauto-engine"
Repository = "https://github.com/AlperHuseyn/cita-uiauto-engine"

[tool.setuptools.packages.find]
where = ["."]
include = ["uiauto_qtquick*"]
