[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uiauto-qtquick"
version = "1.0.0"
description = "QtQuick/UIA automation using uiauto-core"
authors = [{name = "Alper Huseyn"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "uiauto-core==1.0.0",
    "pywinauto>=0.6.8",
    "comtypes>=1.1.7",
    "pillow>=8.0.0",
]

[project.optional-dependencies]
recording = ["pynput>=1.7.0"]
dev = ["pytest>=7.0"]

[project.scripts]
uiauto-qtquick = "uiauto_qtquick.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["uiauto_qtquick*"]
